syntax = "proto3";

package dk.sdu.mmmi.protobuf.ocpp2_0_1.datatypes;

option java_multiple_files = true;
option java_package = "dk.sdu.mmmi.protobuf.ocpp2_0_1.datatypes";

/*
Charging schedule period structure defines a time period in a charging schedule.
ChargingSchedulePeriodType is used by: Common:ChargingScheduleType , Common:CompositeScheduleType
 */
message ChargingSchedulePeriodType {

  /*
  Required. Start of the period, in seconds from the start of
  schedule. The value of StartPeriod also defines the stop
  time of the previous period.
   */
  int32 startPeriod = 1;

  /*
  Required. Charging rate limit during the schedule period,
  in the applicable chargingRateUnit, for example in
  Amperes (A) or Watts (W). Accepts at most one digit
  fraction (e.g. 8.1).
   */
  double limit = 2;

  /*
  Optional. The number of phases that can be used for
  charging.
  For a DC EVSE this field should be omitted.
  For an AC EVSE a default value of numberPhases = 3 will
  be assumed if the field is absent.
   */
  oneof optional_numberPhases {
    int32 numberPhases = 3;
  }

  /*
  Optional. Values: 1..3, Used if numberPhases=1 and if the
  EVSE is capable of switching the phase connected to the
  EV, i.e. ACPhaseSwitchingSupported is defined and true.
  Itâ€™s not allowed unless both conditions above are true. If
  both conditions are true, and phaseToUse is omitted, the
  Charging Station / EVSE will make the selection on its
  own.
   */
  oneof optional_phaseToUse {
    int32 phaseToUse = 4;
  }
}